kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  annotations:
    argocd-image-updater.argoproj.io/image-list: backend=gauravsaini2311/ecommerce-backend:latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: gauravsaini2311/ecommerce-backend:latest
          ports:
            - containerPort: 8080
