kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
  annotations:
  argocd-image-updater.argoproj.io/image-list: frontend=gauravsaini2311/ecommerce-frontend:latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
      - name: ecommerce-frontend
        image: gauravsaini2311/ecommerce-frontend:latest
        ports:
        - containerPort: 80
