kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
spec:
  type: NodePort
  selector:
    app: ecommerce-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
