kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
spec:
  type: NodePort
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
